--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-switch": "^3.4.0",
+    "busy-load": "^0.1.2",
     "core-js": "^3.6.5",
     "epic-spinners": "^1.1.0",
     "jquery": "^3.6.0",
@@ -19,7 +20,9 @@
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
     "vue-alertify": "^1.1.0",
+    "vue-content-loading": "^1.6.0",
     "vue-debounce": "^3.0.1",
+    "vue-loading-overlay": "^4.0.4",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
     "vue-shimmer": "^1.0.0",
