--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "axios": "^0.21.1",
+    "babel-loader": "^8.2.2",
     "bootstrap": "^4.6.0",
     "bootstrap-switch": "^3.4.0",
     "busy-load": "^0.1.2",
-    "core-js": "^3.6.5",
+    "css-loader": "^6.2.0",
+    "core-js": "^3.17.3",
     "epic-spinners": "^1.1.0",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
