--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "babel-loader": "^8.2.2",
     "bootstrap": "^4.6.0",
     "bootstrap-switch": "^3.4.0",
+    "bootstrap-vue": "^2.21.2",
     "busy-load": "^0.1.2",
-    "css-loader": "^6.2.0",
     "core-js": "^3.17.3",
+    "css-loader": "^6.2.0",
     "epic-spinners": "^1.1.0",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
