--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "popper.js": "^1.16.1",
+    "sass-loader": "^12.1.0",
     "vue": "^2.6.11",
     "vue-alertify": "^1.1.0",
     "vue-content-loading": "^1.6.0",
@@ -40,7 +41,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
